# codex-annex

./: .gitmodules  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  THIRD_PARTY_NOTICES.md
.github/: dependabot.yml
schemas/: taskset.schema.json
scripts/: bootstrap_external.sh  install.sh  patch_codex_annex.sh  validate_taskset.rs
src/: acp_server.rs  compact.rs  git_hooks.rs  hooks.rs  hooks_yaml.rs  layered_config.rs  lib.rs  main.rs  mcp_runtime.rs  session_logs.rs  slash.rs  slash_yaml.rs  subagent.rs  task.rs  taskset.rs  todo.rs  todo_yaml.rs  yaml_config.rs
xtask/: Cargo.toml
xtask/src/: main.rs
