# annex/Cargo.toml

[package]
name = "codex-annex"
version = "0.0.1"
edition = "2024"
rust-version = "1.89"
license = "AGPL-3.0-or-later"
description = "Feature-gated agent extensions for codex-rs: TaskSets, hooks, slash commands, MCP bridge, session logs, compactor."
readme = "README.md"
repository = "https://github.com/earthlings-dev/codex-annex"
documentation = "https://docs.rs/codex-annex"
keywords = ["agents","mcp","hooks","tasks","codex"]
categories = ["development-tools","command-line-utilities"]
include = [
  "src/**",
  "Cargo.toml",
  "README.md",
  "LICENSE",
  "THIRD_PARTY_NOTICES.md"
]
# Fallback exclusions (in case include is ignored by tooling)
exclude = [
  "/external/**",
  "/xtask/**",
  "/.github/**",
  "/target/**",
  "/schemas/**",
  "/scripts/**",
  "/.gitmodules",
  "/Makefile",
  "/.codex/**",
  "/Cargo.toml.orig"
]

[workspace]
members = [".", "xtask"]

[features]
default = []
# ACP is scaffolded and off by default. Enabling it requires an external crate
# that is not published on crates.io yet, so we do not declare a dependency
# here to keep this crate publishable.
acp = []

[dependencies]
anyhow = ">=1.0.99"
thiserror = ">=2.0.16"
tokio = { version = ">=1.38", features = ["rt-multi-thread","macros","fs","io-util","process","signal","sync","net"] }
serde = { version = ">=1.0.219", features = ["derive"] }
serde_derive = ">=1.0.219"
serde_json = ">=1.0.143"
directories = ">=6.0.0"
notify = ">=8.2.0"
parking_lot = ">=0.12.4"
futures = ">=0.3.31"
regex = ">=1.11.1"
globset = ">=0.4.16"
ignore = ">=0.4.23"
walkdir = ">=2.5.0"
git2 = ">=0.20.2"
uuid = { version = ">=1.18.0", features = ["v4"] }
chrono = { version = ">=0.4.41", default-features = false, features = ["clock"] }
ratatui = ">=0.29"
crossterm = ">=0.29"
async-trait = "0.1"

toml = ">=0.9.6"
tracing = ">=0.1"
tracing-subscriber = { version = ">=0.3", features = ["fmt", "env-filter"] }
jsonschema = ">=0.33.0"
unicode-width = ">=0.2.0"

# ACP (Agent Client Protocol) dependency intentionally omitted for publishability.
# When the ACP crate is published to crates.io, add it as an optional
# dependency and map it to the `acp` feature.

[dev-dependencies]
tempfile = "3"
